<resources>
    <string name="app_name">ListApplication - final</string>
    <string name="title">Title</string>
    <string name="description">bleble ble bel </string>
    <string name="creation_time"> 12.02.2022 15:15 </string>
    <string name="execution_time"> 12.02.2022 15:30 </string>
    <string name="creation_timeLabel">Created: </string>
    <string name="execution_timeLabel">Execution: </string>

    <string name="statusLabel"> Is Finished: </string>
    <string name="notifications">Notifications: </string>
    <string name="category">Category: </string>
    <string name="addImageButton">Add Image </string>
    <string name="addFile">Add File: </string>
    <string name="save">Save: </string>
    <string name="statusF"> finished</string>
    <string name="statusN"> active</string>
    <string name="notificationsOn"> on </string>
    <string name="notificationsOff"> off </string>
    <string name="hide_finished"> hide finished tasks </string>
    <string name="notifications_time"> Notification time </string>
    <string name="addTag"> Add tag </string>
    <string name="delTag"> Delete tag </string>
    <string name="tags">Tags: </string>
    <string name="delete_task">Delete</string>
</resources>